[package]
name = "chat"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
async-channel = "2.3.1"
dashmap = "5.5.3"
futures = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["codec"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
env_logger = "0.9"